tests/compile_fail/message_trait/engine/ruci_message.rs
fn a(_: impl ruci::engine::traits::Message) {}
fn b(m: ruci::Message) {
    a(m);
}

fn main() {}